# LCBS

./: CMakeLists.txt  README.md  output_eps_vary_temp.txt  output_temp.txt  plot_epsilon_effect.py  plot_gif_eps_variance.py  plot_success_rate.py  sim_data.txt  sim_data_algos_30sec.txt  sim_data_eps_vary_test.txt  sim_eps_data.txt  summary_success_rate.txt  summary_success_rate_savedData.txt
data/: LOG_CONTOUR_empty-32-32_output_log_300sec.txt  LOG_CONTOUR_empty-48-48_output_log_300sec.txt  LOG_CONTOUR_maze-32-32-2_output_log_300sec.txt  LOG_CONTOUR_maze-32-32-4_output_log_300sec.txt  LOG_CONTOUR_random-32-32-20_output_log_300sec.txt  LOG_CONTOUR_random-64-64-10_output_log_300sec.txt  LOG_CONTOUR_random-64-64-20_output_log_300sec.txt  LOG_CONTOUR_room-32-32-4_output_log_300sec.txt  LOG_CONTOUR_room-64-64-8_output_log_300sec.txt  LOG_CONTOUR_warehouse-10-20-10-2-1_output_log_120sec.txt  OUTPUT_LOG_random-32-32-20_BBMOCBS_eps.txt  OUTPUT_LOG_random-32-32-20_BBMOCBS_k_k1.txt  OUTPUT_LOG_random-32-32-20_BBMOCBS_k_k5.txt  OUTPUT_LOG_random-32-32-20_LCBS_k1.txt  empty-32-32_output_log_120sec.txt  random-32-32-20_output_log_120sec.txt  results_custom-32-32-2_120sec.txt  results_custom-32-32-2_120sec_4D.txt  results_empty-32-32_120sec.txt  results_empty-48-48_120sec.txt  results_maze-32-32-2_120sec.txt  results_maze-32-32-2_300sec.txt  results_maze-32-32-4_120sec.txt  results_maze-32-32-4_300sec.txt  results_random-32-32-20_120sec.txt  results_random-32-32-20_300sec.txt  results_random-64-64-10_120sec.txt  results_random-64-64-20_120sec.txt  results_room-32-32-4_120sec.txt  results_room-32-32-4_300sec.txt  results_room-64-64-16_120sec.txt  results_room-64-64-16_300sec.txt  results_room-64-64-8_120sec.txt  room-32-32-4_output_log_120sec.txt  sim_data_algos_15sec.txt  sim_data_algos_1min.txt  sim_data_algos_1sec.txt  sim_data_algos_2min.txt  sim_data_algos_5sec.txt  sim_data_eps_vary.txt  (+1 more)
data/OPTIMALITY_CHECK/: BBMOCBS_eps.csv  BBMOCBS_k1.csv  BBMOCBS_k10.csv  BBMOCBS_k5.csv  BBMOCBS_pex.csv  LCBS.csv
data/OPTIMALITY_CHECK/empty-32-32/: opt_summary_T1.csv  opt_summary_T10.csv  opt_summary_T120.csv  opt_summary_T30.csv  opt_summary_T5.csv  opt_summary_T60.csv
data/OPTIMALITY_CHECK/empty-48-48/: opt_summary_T1.csv  opt_summary_T10.csv  opt_summary_T120.csv  opt_summary_T30.csv  opt_summary_T5.csv  opt_summary_T60.csv
data/OPTIMALITY_CHECK/maze-32-32-2/: opt_summary_T1.csv  opt_summary_T10.csv  opt_summary_T120.csv  opt_summary_T30.csv  opt_summary_T5.csv  opt_summary_T60.csv
data/OPTIMALITY_CHECK/maze-32-32-4/: opt_summary_T1.csv  opt_summary_T10.csv  opt_summary_T120.csv  opt_summary_T30.csv  opt_summary_T5.csv  opt_summary_T60.csv
data/OPTIMALITY_CHECK/random-32-32-20/: opt_summary_T1.csv  opt_summary_T10.csv  opt_summary_T120.csv  opt_summary_T30.csv  opt_summary_T5.csv  opt_summary_T60.csv
data/OPTIMALITY_CHECK/random-64-64-10/: opt_summary_T1.csv  opt_summary_T10.csv  opt_summary_T120.csv  opt_summary_T30.csv  opt_summary_T5.csv  opt_summary_T60.csv
data/OPTIMALITY_CHECK/random-64-64-20/: opt_summary_T1.csv  (+5 more)
data/rand_scen_results/: results_rand_scen_empty-32-32_120sec.txt  results_rand_scen_empty-32-32_120sec_4D.txt  results_rand_scen_empty-48-48_120sec.txt  results_rand_scen_empty-48-48_120sec_4D.txt  results_rand_scen_maze-32-32-2_120sec.txt  results_rand_scen_maze-32-32-2_120sec_4D.txt  results_rand_scen_maze-32-32-4_120sec.txt  results_rand_scen_maze-32-32-4_120sec_4D.txt  results_rand_scen_random-32-32-20_120sec.txt  results_rand_scen_random-32-32-20_120sec_4D.txt  results_rand_scen_random-64-64-10_120sec.txt  results_rand_scen_random-64-64-10_120sec_4D.txt  results_rand_scen_random-64-64-20_120sec.txt  results_rand_scen_random-64-64-20_120sec_4D.txt  results_rand_scen_room-32-32-4_120sec.txt  results_rand_scen_room-32-32-4_120sec_4D.txt  results_rand_scen_room-64-64-16_120sec.txt  results_rand_scen_room-64-64-8_120sec.txt  results_rand_scen_room-64-64-8_120sec_4D.txt
data/success_rate_results/: warehouse-10-20-10-2-1_120sec-rand.txt  warehouse-10-20-10-2-1_120sec.txt  warehouse-10-20-10-2-1_4D_120sec.txt  warehouse-10-20-10-2-1_4D_rand_120sec.txt
example/: coral_sim.cost  distance.cost  eddy.cost  eddy_realWorld.cost  random-3.cost  salp-map-60-60.map  salp-map-60-60.scen
inc/: Definitions.h
inc/HighLevel/: HighLevelSolver.h  epsSolver.h  kSolver.h  lcbsSolver.h  pexSolver.h
inc/LowLevel/: AbstractSolver.h  RunLAstar.h
maps/custom-32-32-2/: random-4.cost  random-7.cost
maps/empty-48-48/: random-1.cost  random-2.cost  random-3.cost  random-6.cost  random-8.cost
maps/random-64-64-20/: random-1.cost
maps/room-64-64-8/: random-3.cost  random-6.cost
maps/warehouse-10-20-10-2-1/: random-1.cost  random-2.cost  random-3.cost  random-7.cost
maps_rand_scen/empty-48-48/: random-7.cost
maps_rand_scen/random-64-64-10/: random-8.cost
maps_rand_scen/random-64-64-20/: random-9.cost
maps_rand_scen/room-64-64-8/: random-7.cost
scripts/: plot_all_benchmarks.py  plot_all_benchmarks_agents.py  plot_dimensional_trend.py  plot_epsilon_effect.py  plot_gif_eps_variance.py  plot_optimality_lines.py  plot_optimality_surfaces.py  plot_success_rate.py  random_scen_generate.py
src/: IOUtils.cpp  aggregate_lexopt_percentages.cpp  main.cpp  run_optimality_experiments.cpp  run_optimality_experiments1.cpp  run_optimality_experiments2.cpp  run_sim_success_contours.cpp  run_sim_success_rates.cpp  sim_map1.cpp  sim_map10.cpp  sim_map11_1.cpp  sim_map11_2.cpp  sim_map11_3.cpp  sim_map11_4.cpp  sim_map11_5.cpp  sim_map11_6.cpp  sim_map11_7.cpp  sim_map11_8.cpp  sim_map2.cpp  sim_map3.cpp  sim_map4.cpp  sim_map5.cpp  sim_map6.cpp  sim_map7.cpp  sim_map8.cpp  sim_map9.cpp  simulate_algo.cpp  simulate_baseline_comparisons.cpp  simulate_baseline_comparisons_1min.cpp  simulate_baseline_comparisons_2min.cpp  simulate_slack_experiments.cpp  test_epsilon_effect.cpp
src/HighLevel/: HighLevelSolver.cpp  epsSolver.cpp  kSolver.cpp  lcbsSolver.cpp  pexSolver.cpp
src/LowLevel/: ApexSearch.cpp  DominanceChecker.cpp  NAMOA.cpp  RunApex.cpp  RunLAstar.cpp  ShortestPathHeuristic.cpp
(+563 files in other folders)
